--- a/stationery-api/package.json
+++ b/stationery-api/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.43.0",
+    "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "multer": "^2.0.1",
     "validator": "^13.15.0",
     "zxcvbn": "^4.4.2"
   }
